<resources>
    <string name="app_name">BMI Calculator App</string>
    <string name="develop_by_md_kajam_all_koraish">Developed by\nMD. KAJAM-ALL KORAISH\nID - 20</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="_0_0">0.0</string>
    <string name="kg">KG</string>
    <string name="cm">CM</string>
    <string name="_0_0_">0.0</string>
    <string name="calculate">CALCULATE</string>
</resources>