<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".BmiActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300.dp"
        android:layout_height="150.dp"
        android:layout_marginTop="70.dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20.dp"
        app:cardElevation="15.dp"
        app:cardMaxElevation="15.dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.dp"
                android:text="@string/weight"
                android:textColor="@color/white"
                android:textSize="24.sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.151"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightInputLayout"
                android:layout_width="100.dp"
                android:layout_height="70.dp"
                android:layout_marginTop="12.dp"
                android:hint="@string/_0_0"
                app:hintTextColor="@color/white"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="@+id/weightTxt"
                app:layout_constraintStart_toStartOf="@+id/weightTxt"
                app:layout_constraintTop_toBottomOf="@+id/weightTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weightEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="30.sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/kgTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textColor="@color/white"
                android:textSize="18.sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/weightInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toEndOf="@+id/weightInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/weightTxt"
                app:layout_constraintVertical_bias="0.737" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="300.dp"
        android:layout_height="150.dp"
        android:layout_marginTop="20.dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20.dp"
        app:cardElevation="15.dp"
        app:cardMaxElevation="15.dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/heightTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.dp"
                android:text="@string/height"
                android:textColor="@color/white"
                android:textSize="24.sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.151"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heightInputLayout"
                android:layout_width="100.dp"
                android:layout_height="70.dp"
                android:layout_marginTop="12.dp"
                android:hint="@string/_0_0_"
                app:hintTextColor="@color/white"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="@+id/heightTxt"
                app:layout_constraintStart_toStartOf="@+id/heightTxt"
                app:layout_constraintTop_toBottomOf="@+id/heightTxt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="30.sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cmTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textColor="@color/white"
                android:textSize="18.sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/heightInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toEndOf="@+id/heightInputLayout"
                app:layout_constraintTop_toTopOf="@+id/heightInputLayout"
                app:layout_constraintVertical_bias="0.737" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18.dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/calculate"
        android:textSize="24.sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="15.dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView1"
        app:layout_constraintStart_toStartOf="@+id/cardView1"
        app:layout_constraintTop_toBottomOf="@+id/cardView1" />


    <androidx.cardview.widget.CardView
        android:id="@+id/calCard"
        android:layout_width="300.dp"
        android:layout_height="170.dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20.dp"
        app:cardElevation="15.dp"
        app:cardMaxElevation="15.dp"
        app:layout_constraintEnd_toEndOf="@+id/calBtn"
        app:layout_constraintStart_toStartOf="@+id/calBtn"
        app:layout_constraintTop_toBottomOf="@+id/calBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/countTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20.dp"
                android:textColor="@color/white"
                android:textSize="34.sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rangeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24.sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/countTxt"
                app:layout_constraintStart_toStartOf="@+id/countTxt"
                app:layout_constraintTop_toBottomOf="@+id/countTxt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20.dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/develop_by_md_kajam_all_koraish"
        android:textColor="@color/white"
        android:textSize="16.sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/calCard"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/calCard"
        app:layout_constraintTop_toBottomOf="@+id/calCard" />

</androidx.constraintlayout.widget.ConstraintLayout>
